# GameJobScraper

./: .env.example  .gitignore  profile.yaml  pyproject.toml  requirements.txt  workspace.code-workspace
.claude/: settings.local.json
config/: config.yaml  profile.yaml
gamejobtracker/: __init__.py  __main__.py  cli.py  config.py
gamejobtracker/db/: models.py  repository.py
gamejobtracker/db/notifications/: notification_manager.py
gamejobtracker/notifications/: discord_notifier.py  email_notifier.py
gamejobtracker/scheduler/: job_scheduler.py
gamejobtracker/scoring/: ai_scorer.py  keyword_scorer.py  profile.py  scorer_manager.py
gamejobtracker/scrapers/: base.py  gamejobsco.py  hitmarker.py  jsearch.py  scraper_manager.py  workwithindies.py
gamejobtracker/utils/: logging_config.py  rate_limiter.py  text_processing.py
