[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamejobtracker"
version = "0.1.0"
description = "AI-powered game industry job tracker"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "feedparser>=6.0.0",
    "anthropic>=0.40.0",
    "scikit-learn>=1.3.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "discord-webhook>=1.3.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
dev = ["pytest>=7.4.0"]

[project.scripts]
gamejobtracker = "gamejobtracker.cli:cli"

[tool.setuptools.packages.find]
include = ["gamejobtracker*"]
